# web-frameworks-benchmarks

./: .env  .gitignore  README.md  docker-compose.yml
fastapi/: Dockerfile  pyproject.toml
flask/: Dockerfile  app.py  pyproject.toml
go/: go.mod  go.sum  main.go
goproxy/: Dockerfile  main.go
http4s/: Dockerfile  Dockerfile.jit  Dockerfile.native-image  build.sbt  flake.nix
http4s/project/: Dependencies.scala  plugins.sbt
http4s/src/main/scala/io/renku/bench/: Config.scala  EnvConfig.scala  Http4sMain.scala  Message.scala  RedisLog.scala  Routes.scala
load-tests/: common.js  directAccessFastApi.js  directAccessFlask.js  directAccessGo.js  directAccessHttp4s.js  directAccessNode.js  directAccessQuart.js  directAccessRust.js  directAccessSanic.js  proxyingGo.js  proxyingNode.js  proxyingTraefik.js  redisAccessFlask.js  redisAccessGo.js  redisAccessHttp4s.js  redisAccessQuart.js  redisAccessRust.js  redisAccessSanic.js
nodejs/: Dockerfile  index.js  package.json
nodejsproxy/: index.js  package-lock.json  package.json
quart/: Dockerfile  app.py  pyproject.toml
redis-init/: Dockerfile  init.sh
rust/: Cargo.toml  Dockerfile
rust/src/: main.rs
sanic/: Dockerfile  app.py  pyproject.toml
traefik/: Dockerfile  dynamic-conf.yml  traefik.yml
