[tool.poetry]
name = "fastapi-test"
version = "0.1.0"
description = ""
authors = ["Tasko Olevski <tasko.olevski@sdsc.ethz.ch>"]
readme = "README.md"
packages = [{include = "fastapi_test"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
