[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Tasko Olevski <tasko.olevski@sdsc.ethz.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"
gunicorn = "^20.1.0"
redis = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
