[tool.poetry]
name = "quart-test"
version = "0.1.0"
description = ""
authors = ["Tasko Olevski <tasko.olevski@sdsc.ethz.ch>"]
readme = "README.md"
packages = [{include = "quart_test"}]

[tool.poetry.dependencies]
python = "^3.10"
quart = "^0.18.3"
hypercorn = "^0.14.3"
redis = "^4.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
